# dailies

./: README.md  meson.build
src/: dailies.d  event.d  eventdatabase.d  eventrow.d  gtkutils.d  main.d  mainwindow.d
subprojects/: .gitignore  gtkd-utils.wrap
